--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
          </section>
          <section class="feed">
             <div class="feed__container">
-               <h1 class="feeg_title">Loved by businesses, and individuals across the globe.</h1>
+               <h1 class="feed_title">Loved by businesses, and individuals across the globe.</h1>
                <div class="feed__main main-feed">
                   <div class="main-feed__item item-main-feed">
                      <div class="item-main-feed__stars"><img src="img/feed/04.png" alt=""></div>
